objects/Cobalt_Case_History__c.object
<CustomObject>
    <description>Case field history from legacy Cobalt Salesforce Instance (SF Advantage)</description>
    <fields>
        <fullName>Case__c</fullName>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipName>Case_History</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Cobalt_Consolidation_ID__c</fullName>
        <externalId>true</externalId>
        <label>Cobalt Consolidation ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Field__c</fullName>
        <label>Field</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Value__c</fullName>
        <label>New Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_Value__c</fullName>
        <label>Old Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Case History – Archive</label>
    <nameField>
        <displayFormat>CH-{0000000000}</displayFormat>
        <label>Case History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case History – Archive</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>